add ReadMe for future users

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7384bb25",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "import duckdb\n",
+    "\n",
+    "import yaml\n",
+    "\n",
+    "db_path = \"/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data.duckdb\"\n"
    ]
   },
   {
@@ -74,16 +80,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d724af16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "f5ba6bfd",
    "metadata": {},
@@ -95,54 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4bb9ada9",
+   "execution_count": 5,
+   "id": "d2c206f5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'paths': {'db_path': '/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data.duckdb',\n",
-       "  'video_path': '/home/max/drive/dshs/Creativity/code/creativity-rating-app/data/'}}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "event_ids = os.listdir('/home/max/drive/dshs/Creativity/code/creativity-rating-app/videos_all/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "57b51b08",
+   "execution_count": 4,
+   "id": "ce0b9ff3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data.duckdb'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['paths']['db_path']"
+    "conn = duckdb.connect(db_path)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce0b9ff3",
+   "id": "01b87f5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert list of video filenames to event IDs (removing .mp4 extension)\n",
+    "event_id_str = ', '.join(f\"'{event_id.replace('.mp4', '')}'\" for event_id in self.videos)\n",
+    "\n",
+    "# Fetch metadata for all actions from included videos\n",
+    "query = f\"SELECT * FROM events WHERE id IN ({event_id_str})\"\n",
+    "df_actions = conn.execute(query).fetchdf()\n"
+   ]
   }
  ],
  "metadata": {
