change video display logic and remove previous action button

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "7384bb25",
    "metadata": {},
    "outputs": [],
@@ -20,94 +20,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "aff40589",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class VideoPlayerScreen():\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "        self.index = 0\n",
-    "\n",
-    "        # Load metadata from CSV\n",
-    "        self.path_metadata = '/home/max/drive/coding/projects/13___creativity/lsa-creativity/data/df_actions/'\n",
-    "        self.ls_matches  = [match.split('.')[0] for match in os.listdir(self.path_metadata)]\n",
-    "        self.metadata = pd.concat([pd.read_csv(self.path_metadata + actions_df+'.csv') for actions_df in self.ls_matches])\n",
-    "        self.path_videos = '/media/max/Elements/Sebastian_Spiele/Bundesliga/'\n",
-    "\n",
-    "        self.videos = [\n",
-    "            os.path.join(self.path_videos, folder, file)\n",
-    "            for folder in self.ls_matches\n",
-    "            for file in os.listdir(os.path.join(self.path_videos, folder))\n",
-    "            if file.endswith('.mp4')\n",
-    "        ]\n",
-    "\n",
-    "        random.seed(42)\n",
-    "        random.shuffle(self.videos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "dc366b16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vid = VideoPlayerScreen()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2685f5f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'470f27b3-b1e9-43f1-9dc7-7c1dbf9f1d33'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vid.videos[0].split('/')[-1].replace('.mp4', '')  # Display the name of the first video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f5ba6bfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Load configuration from YAML file\n",
     "with open('config.yaml', 'r') as file:\n",
-    "    data = yaml.safe_load(file)"
+    "    config_data = yaml.safe_load(file)\n",
+    "\n",
+    "db_path = config_data['paths']['db_path']\n",
+    "video_path = config_data['paths']['video_path']\n",
+    "\n",
+    "user_id = 'giha3042'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d2c206f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "event_ids = os.listdir('/home/max/drive/dshs/Creativity/code/creativity-rating-app/videos_all/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "ce0b9ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = duckdb.connect(db_path)\n"
+    "#conn = duckdb.connect(db_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd9e7bfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb7bc9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "941344c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
