group ratings by event id and save mean_ratings.csv

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "7384bb25",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,14 @@
     "import os\n",
     "import pandas as pd\n",
     "import random\n",
+    "import json\n",
+    "from datetime import datetime\n",
     "\n",
     "import duckdb\n",
     "\n",
     "import yaml\n",
     "\n",
-    "db_path = \"/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data.duckdb\"\n"
+    "db_path = \"/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data_backup.duckdb\"\n"
    ]
   },
   {
@@ -36,13 +38,294 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d16bf596",
+   "metadata": {},
+   "source": [
+    "## Save ratings and calculate rating means per event"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "ce0b9ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#conn = duckdb.connect(db_path)\n"
+    "userdata_path = 'user_data/'\n",
+    "ratings_path = 'user_ratings/'\n",
+    "\n",
+    "def load_json_files_with_datetime(path, file_type='ratings'):\n",
+    "    \"\"\"\n",
+    "    Load all JSON files from a directory and add creation datetime.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - path: directory path containing JSON files\n",
+    "    - file_type: string to identify the type of data (for column naming)\n",
+    "    \n",
+    "    Returns:\n",
+    "    - DataFrame with all records and file_created_at column\n",
+    "    \"\"\"\n",
+    "    all_data = []\n",
+    "    \n",
+    "    for filename in os.listdir(path):\n",
+    "        if filename.endswith('.json'):\n",
+    "            filepath = os.path.join(path, filename)\n",
+    "            \n",
+    "            # Get file modification time (preserved when copying between machines)\n",
+    "            modification_time = os.path.getmtime(filepath)\n",
+    "            creation_datetime = datetime.fromtimestamp(modification_time)\n",
+    "            \n",
+    "            # Load JSON file\n",
+    "            with open(filepath, 'r') as f:\n",
+    "                data = json.load(f)\n",
+    "            \n",
+    "            # Handle both single dict and list of dicts\n",
+    "            if isinstance(data, dict):\n",
+    "                data = [data]\n",
+    "            elif not isinstance(data, list):\n",
+    "                data = [{'content': data}]\n",
+    "            \n",
+    "            # Add metadata to each record\n",
+    "            for record in data:\n",
+    "                record['file_created_at'] = creation_datetime\n",
+    "                record['filename'] = filename\n",
+    "            \n",
+    "            all_data.extend(data)\n",
+    "    \n",
+    "\n",
+    "    df = pd.DataFrame(all_data)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fb5eb9d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 2826 ratings from 2826 files\n",
+      "Number of rated actions: 1575\n",
+      "\n",
+      "Loaded 21 user records from 21 files\n",
+      "Number of unique users: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Load ratings\n",
+    "df_ratings = load_json_files_with_datetime(ratings_path, 'ratings')\n",
+    "#df_ratings.to_csv('output/ratings.csv')\n",
+    "print(f\"Loaded {len(df_ratings)} ratings from {df_ratings['filename'].nunique()} files\")\n",
+    "print(f\"Number of rated actions: {df_ratings['id'].nunique()}\")\n",
+    "\n",
+    "# Load user data\n",
+    "df_users = load_json_files_with_datetime(userdata_path, 'users')\n",
+    "#df_users.to_csv('output/users.csv')\n",
+    "print(f\"\\nLoaded {len(df_users)} user records from {df_users['filename'].nunique()} files\")\n",
+    "print(f\"Number of unique users: {df_users['user_id'].nunique()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6f6cc791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mean_ratings = df_ratings.groupby('id').agg(\n",
+    "    num_ratings=('action_rating', 'count'),\n",
+    "    mean_rating=('action_rating', 'mean'),\n",
+    "    std_rating=('action_rating', 'std'),\n",
+    "    mean_technical_correctness=('technical_correctness', 'mean'),\n",
+    "    std_technical_correctness=('technical_correctness', 'std'),\n",
+    "    mean_aesthetic_appeal=('aesthetic_appeal', 'mean'),\n",
+    "    std_aesthetic_appeal=('aesthetic_appeal', 'std'),\n",
+    "    mean_action_not_recognized=('action_not_recognized', 'mean')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "522e5891",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>action_rating</th>\n",
+       "      <th>technical_correctness</th>\n",
+       "      <th>aesthetic_appeal</th>\n",
+       "      <th>action_not_recognized</th>\n",
+       "      <th>file_created_at</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>clpe1410</td>\n",
+       "      <td>0881f9d1-1e9d-446b-b6a4-fd45c63508e5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-10-18 17:18:15.440122</td>\n",
+       "      <td>clpe1410_0881f9d1-1e9d-446b-b6a4-fd45c63508e5....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>anma2416</td>\n",
+       "      <td>da098f44-2f47-49c5-aa41-b54954362409</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-10-16 13:59:13.000000</td>\n",
+       "      <td>anma2416_da098f44-2f47-49c5-aa41-b54954362409....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mana12312</td>\n",
+       "      <td>2843ae21-38e2-468e-9425-29cf5c9e442f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-10-15 11:15:01.000000</td>\n",
+       "      <td>mana12312_2843ae21-38e2-468e-9425-29cf5c9e442f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mana12312</td>\n",
+       "      <td>02da8947-987e-4c02-9b62-09198e312169</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-10-16 11:03:10.000000</td>\n",
+       "      <td>mana12312_02da8947-987e-4c02-9b62-09198e312169...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mana12312</td>\n",
+       "      <td>0969fb41-c9c7-4b5d-ade9-9e601be5a2c9</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-10-16 11:04:54.000000</td>\n",
+       "      <td>mana12312_0969fb41-c9c7-4b5d-ade9-9e601be5a2c9...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id                                    id  action_rating  \\\n",
+       "0   clpe1410  0881f9d1-1e9d-446b-b6a4-fd45c63508e5            3.0   \n",
+       "1   anma2416  da098f44-2f47-49c5-aa41-b54954362409            1.0   \n",
+       "2  mana12312  2843ae21-38e2-468e-9425-29cf5c9e442f            1.0   \n",
+       "3  mana12312  02da8947-987e-4c02-9b62-09198e312169            5.0   \n",
+       "4  mana12312  0969fb41-c9c7-4b5d-ade9-9e601be5a2c9            2.0   \n",
+       "\n",
+       "   technical_correctness  aesthetic_appeal  action_not_recognized  \\\n",
+       "0                    5.0               2.0                  False   \n",
+       "1                    3.0               1.0                  False   \n",
+       "2                    1.0               2.0                  False   \n",
+       "3                    6.0               4.0                  False   \n",
+       "4                    5.0               2.0                  False   \n",
+       "\n",
+       "             file_created_at  \\\n",
+       "0 2025-10-18 17:18:15.440122   \n",
+       "1 2025-10-16 13:59:13.000000   \n",
+       "2 2025-10-15 11:15:01.000000   \n",
+       "3 2025-10-16 11:03:10.000000   \n",
+       "4 2025-10-16 11:04:54.000000   \n",
+       "\n",
+       "                                            filename  \n",
+       "0  clpe1410_0881f9d1-1e9d-446b-b6a4-fd45c63508e5....  \n",
+       "1  anma2416_da098f44-2f47-49c5-aa41-b54954362409....  \n",
+       "2  mana12312_2843ae21-38e2-468e-9425-29cf5c9e442f...  \n",
+       "3  mana12312_02da8947-987e-4c02-9b62-09198e312169...  \n",
+       "4  mana12312_0969fb41-c9c7-4b5d-ade9-9e601be5a2c9...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a3a355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Generate log file with statistics\n",
+    "log_path = 'output/rating_log.txt'\n",
+    "with open(log_path, 'w') as log_file:\n",
+    "    log_file.write(\"=\" * 60 + \"\\n\")\n",
+    "    log_file.write(\"CREATIVITY RATING APP - DATA EXPORT LOG\\n\")\n",
+    "    log_file.write(\"=\" * 60 + \"\\n\")\n",
+    "    log_file.write(f\"Generated at: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\")\n",
+    "\n",
+    "    # 1. Number of unique actions rated\n",
+    "    num_unique_actions = df_ratings['id'].nunique()\n",
+    "    log_file.write(f\"Number of unique actions rated: {num_unique_actions}\\n\\n\")\n",
+    "\n",
+    "    # 2. Number of raters involved\n",
+    "    num_unique_raters = df_users['user_id'].nunique()\n",
+    "    log_file.write(f\"Number of raters involved: {num_unique_raters}\\n\\n\")\n",
+    "\n",
+    "    # 3. Value counts of value counts for 'id' in df_ratings\n",
+    "    # First, count how many times each action ID has been rated\n",
+    "    id_rating_counts = df_ratings['id'].value_counts()\n",
+    "    # Then, count how many IDs have each rating count (e.g., how many IDs rated once, twice, etc.)\n",
+    "    rating_frequency_distribution = id_rating_counts.value_counts().sort_index()\n",
+    "\n",
+    "    log_file.write(\"Rating frequency distribution:\\n\")\n",
+    "    log_file.write(\"-\" * 40 + \"\\n\")\n",
+    "    log_file.write(f\"{'Times Rated':<15} {'Number of Actions':<20}\\n\")\n",
+    "    log_file.write(\"-\" * 40 + \"\\n\")\n",
+    "    for times_rated, num_actions in rating_frequency_distribution.items():\n",
+    "        log_file.write(f\"{times_rated:<15} {num_actions:<20}\\n\")\n",
+    "\n",
+    "    log_file.write(\"\\n\" + \"=\" * 60 + \"\\n\")\n",
+    "\n",
+    "print(f\"\\n[INFO] Log file created: {log_path}\")"
    ]
   },
   {
@@ -475,12 +758,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kivyCreativityEnv (3.10.12)",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
